# full-Stack-Travel-Asistent-Agent-Livekit

./: README.md
backend/: README.md  data.txt
backend/livekit-voice-agent/: Dockerfile  README.md  agent.py  livekit.toml  main.py  pyproject.toml  requirements.txt
backend/livekit-voice-agent/tools/: flights_finder.py  hotels_finder.py
frontend/: README.md  app-config.ts  lk-n8n-workflow.json  package-lock.json  package.json  pnpm-lock.yaml  travel-voice-assistant-app.tsx  travel-voice-assistant-landing (1).tsx
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx  opengraph-image.tsx  page.tsx
frontend/app/(app)/voice-assistant/: page.tsx
frontend/app/api/connection-details/: route.ts
frontend/app/components/: Container.tsx  Tabs.tsx  layout.tsx  page.tsx
frontend/app/components/base/: page.tsx
frontend/app/components/livekit/: page.tsx
frontend/components/: alert-toast.tsx  app.tsx  provider.tsx  session-view.tsx  theme-toggle.tsx  welcome.tsx
frontend/components/livekit/: agent-tile.tsx  avatar-tile.tsx  device-select.tsx  media-tiles.tsx  track-toggle.tsx  video-tile.tsx
frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx
frontend/components/livekit/agent-control-bar/hooks/: use-agent-control-bar.ts  (+1 more)
frontend/components/livekit/chat/: chat-entry.tsx  chat-input.tsx  chat-message-view.tsx
frontend/components/ui/: alert.tsx  button.tsx  select.tsx  sonner.tsx  toggle.tsx
frontend/hooks/: useChatAndTranscription.ts  useConnectionDetails.ts  useDebug.ts
frontend/lib/: types.ts  utils.ts
(+1 files in other folders)
